--- a/templates/newRestaurant.html
+++ b/templates/newRestaurant.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>New Restaurant</h1>
-        <form method='post' action="#">
+        <form method='post' action="{{url_for('newRestaurant')}}">
             <p>Name:</p>
             <input type='text' name='newRestaurant'>
             <input type='submit' value='Create'>
