--- a/templates/deleteMenuItem.html
+++ b/templates/deleteMenuItem.html
@@ -6,9 +6,9 @@
     </head>
     <body>
         <h1>Are you sure you want to delete {{item.name}}?</h1>
-        <form method='post' action="#">
+        <form method='post' action="{{url_for('deleteMenuItem', restaurant_id = item.restaurant_id, menu_id = item.id)}}">
             <input type='submit' value='Delete'>
-            <p><a href="#">Cancel</a></p>
+            <p><a href="{{url_for('showMenu', restaurant_id = item.restaurant_id)}}">Cancel</a></p>
         </form>
     </body>
 </html>
