--- a/templates/newMenuItem.html
+++ b/templates/newMenuItem.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>New Menu Item</h1>
-        <form method='post' action="#">
+        <form method='post' action="{{url_for('newMenuItem', restaurant_id = restaurant_id)}}">
             <p>Name:</p>
             <input type='text' name='item_name'>
             <p>Description:</p>
