--- a/templates/restaurants.html
+++ b/templates/restaurants.html
@@ -3,6 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <title>Restaurants</title>
+        <style>
+            a:link.resto{
+                text-decoration: none;
+                color: black;
+            }
+            a:visited.resto{
+                color: black;
+            }
+            a:hover.resto{
+                text-decoration: underline;
+                color: black;
+            }
+        </style>
     </head>
     <body>
         <h1>Restaurants</h1>
@@ -13,7 +26,7 @@
         {% if restaurants %}
         {% for restaurant in restaurants %}
             <p>
-                {{restaurant.name}}
+                <a class='resto' href="{{url_for('showMenu', restaurant_id = restaurant.id)}}">{{restaurant.name}}</a>
                 </br>
                 <a href="{{url_for('editRestaurant', restaurant_id = restaurant.id)}}">Edit Restaurant</a>
                 </br>
