--- a/templates/deleteRestaurant.html
+++ b/templates/deleteRestaurant.html
@@ -8,7 +8,7 @@
         <h1>Are you sure you want to delete {{restaurant.name}}?</h1>
         <form method='post' action="{{url_for('deleteRestaurant',restaurant_id = restaurant.id)}}">
             <input type='submit' value='Delete'>
-            <p><a href="{{url_for('showRestaurants')}}">Cancel</a></p>
+            <p><a href="{{url_for('showMenu', restaurant_id = restaurant.id)}}">Cancel</a></p>
         </form>
     </body>
 </html>
