--- a/templates/publicMenu.html
+++ b/templates/publicMenu.html
@@ -13,15 +13,9 @@
 			</figure>
         </h1>
         <p><a href="{{url_for('showRestaurants')}}">Show All Restaurants</a></p>
-        <p><a href="{{url_for('disconnect')}}">Click Here to Log out </a></p>
         {% if not items %}
-        <p> You currently have no menu items.</p>
+        <p> There are currently no menu items.</p>
         {% endif %}
-        <p>
-            <a href="{{url_for('newMenuItem', restaurant_id = restaurant.id)}}" style="margin:10px;">Add new item</a>
-            <a href="{{url_for('editRestaurant', restaurant_id = restaurant.id)}}" style="margin:10px;">Edit Restaurant</a>
-            <a href="{{url_for('deleteRestaurant', restaurant_id = restaurant.id)}}" style="margin:10px;">Delete Restaurant</a>
-        <p>
         
         {% if items %}
             {% set gns = namespace(courses = ["Appetizer", "Entree", "Dessert", "Beverage"]) %}
@@ -42,10 +36,6 @@
                         {{item.description}}
                         </br>
                         {{item.price}}
-                        </br>
-                        <a href="{{url_for('editMenuItem', restaurant_id = restaurant.id, menu_id = item.id)}}">Edit</a>
-                        </br>
-                        <a href="{{url_for('deleteMenuItem', restaurant_id = restaurant.id, menu_id = item.id)}}">Delete</a>
                     </p>
                 {% endif %}
                 {% endfor %} 
