--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
         </script>
     </head>
     <body>
-        <!-- Google plus sign in --->
+        <!-- Google plus sign in -->
         <div id="signinButtonG">
             <span class="g-signin"
              data-scope="openid email"
